# claude-code-remote

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/plans/: 2026-02-19-cli-packaging-design.md  2026-03-07-api-server-implementation-plan.md  2026-03-07-api-server-redesign.md  2026-03-09-terminal-integration-design.md  2026-03-09-terminal-integration.md  2026-03-09-terminal-server.md
docs/superpowers/plans/: 2026-03-14-orphan-process-cleanup.md  2026-03-15-session-dashboard-backend.md  2026-03-15-session-dashboard-frontend.md  2026-03-16-file-attachments.md  2026-03-16-native-session-interop.md
docs/superpowers/specs/: 2026-03-14-orphan-process-cleanup-design.md  2026-03-15-session-dashboard-design.md  2026-03-16-file-attachments-design.md
scripts/: README.md  menubar.py  start-remote-cli.sh
src/claude_code_remote/: __init__.py  approval_rules.py  auth.py  cli.py  config.py  cron_manager.py  dashboard.py  git.py  git_check.py  hidden_sessions.py  mcp.py  menubar.py  models.py  native_sessions.py  project_store.py  projects.py  push.py  routes.py  server.py  server_main.py  services.py  session_manager.py  tailscale.py  templates.py  terminal.py  tmux.py  uploads.py  usage.py  voice.py  voice_server.py  websocket.py  workflows.py
src/claude_code_remote/dashboard/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
src/claude_code_remote/dashboard/src/: App.tsx  api.ts  config.tsx  main.tsx  types.ts
src/claude_code_remote/hooks/: ccr_approval.py
tests/: test_approval_rules.py  test_auth.py  test_config.py  test_cron_execution.py  test_cron_manager.py  test_cron_routes.py  test_dashboard_routes.py  test_git.py  test_hidden_sessions.py  test_integration.py  test_mcp.py  test_menubar.py  test_models.py  test_native_interop.py  test_native_reader_interop.py  test_native_sessions.py  test_projects.py  test_push.py  test_routes.py  test_session_manager.py  test_templates.py  test_uploads.py  test_usage.py  test_websocket.py  test_workflows.py
(+11 files in other folders)
