[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-code-remote"
version = "0.2.0"
description = "Remote access to Claude Code CLI over Tailscale"
requires-python = ">=3.10"
dependencies = [
    "click",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic>=2.0",
    "websockets",
    "rumps; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
]

[project.scripts]
ccr = "claude_code_remote.cli:cli"
