[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-code-remote"
version = "0.2.0"
description = "Remote access to Claude Code CLI over Tailscale"
requires-python = ">=3.10"
dependencies = [
    "click",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic>=2.0",
    "websockets",
    "rumps; sys_platform == 'darwin'",
    "apscheduler>=3.10,<4",
    "croniter>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
]

[project.scripts]
ccr = "claude_code_remote.cli:cli"
